setup db connection

--- a/.env
+++ b/.env
@@ -1,5 +1,28 @@
 # Flask configuration
 FLASK_APP=run.py
+FLASK_CONFIG=development
+FLASK_DEBUG=1
+SECRET_KEY=buyzaar-secret-key-change-in-production
+LOG_LEVEL=DEBUG
+
+# Database configuration
+DATABASE_URL=postgresql://dmtavs:Dmt@1212@localhost:5432/buyzaar
+DEV_DATABASE_URL=postgresql://dmtavs:Dmt@1212@localhost:5432/buyzaar
+TEST_DATABASE_URL=sqlite:///:memory:
+
+# Server configuration
+HOST=0.0.0.0
+PORT=5000
+
+# Keycloak configuration
+KEYCLOAK_SERVER_URL=http://3.6.134.85:8080/
+KEYCLOAK_REALM=buyzaar
+KEYCLOAK_CLIENT_ID=buyzaar-client
+KEYCLOAK_CLIENT_SECRET=your-client-secret
+
+# Google Drive configuration
+GOOGLE_CREDENTIALS_FILE=credentials.json# Flask configuration
+FLASK_APP=run.py
 FLASK_ENV=development
 SECRET_KEY=your_secret_key_here
 
@@ -8,9 +31,9 @@ DATABASE_URL=postgresql://username:password@localhost:5432/dbname
 
 # Keycloak configuration
 KEYCLOAK_SERVER_URL=http://localhost:8080/auth/
-KEYCLOAK_REALM=your_realm
-KEYCLOAK_CLIENT_ID=your_client_id
-KEYCLOAK_CLIENT_SECRET=your_client_secret
+KEYCLOAK_REALM=buyzaar
+KEYCLOAK_CLIENT_ID=buyzaar-client
+KEYCLOAK_CLIENT_SECRET=your-client-secret
 
 # Google Drive configuration
 GOOGLE_CREDENTIALS_FILE=path_to_credentials.json
